--- a/.github/workflows/eshoponweb-cicd-east.yml
+++ b/.github/workflows/eshoponweb-cicd-east.yml
@@ -1,15 +1,15 @@
-name: eShopOnWeb Build and Test (Patrick)
+name: eShopOnWeb Build and Test (East)
 
 #Triggers (uncomment line below to use it)
 on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshoponweb-eastus2
+  LOCATION: eastus2
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 89afbc87-96fe-4f64-b199-a059c9cc34ca
-  WEBAPP-NAME: rg-eshoponweb-westeurope
+  WEBAPP-NAME: devops-webapp-eastus2-51363812
 
 jobs:
   #Build, test and publish .net web project in repository
